--- a/lib/bookify_web/controllers/book_html/index.html.heex
+++ b/lib/bookify_web/controllers/book_html/index.html.heex
@@ -16,7 +16,7 @@
         class="circle"
       />
       <span>
-        <%= link(book.title, to: Routes.book_path(@conn, :show, book.id), class: "title") %>
+        <%= link(book.title, to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(book)), class: "title") %>
       </span>
       <%= if RequireAdmin.user_is_admin?(current_user(@conn)) do %>
         <div class="right">
