--- a/lib/bookify_web/controllers/list_html/index.html.heex
+++ b/lib/bookify_web/controllers/list_html/index.html.heex
@@ -7,7 +7,7 @@
       <%= for book <- list.books do %>
         <li class="collection-item">
           <span>
-            <%= link(book.title, to: Routes.book_path(@conn, :show, book.id), class: "title") %>
+            <%= link(book.title, to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(book)), class: "title") %>
           </span>
           <div class="right">
             <%= link(gettext("Delete"),
@@ -27,7 +27,7 @@
       <%= for book <- list.books do %>
         <li class="collection-item">
           <span>
-            <%= link(book.title, to: Routes.book_path(@conn, :show, book.id), class: "title") %>
+            <%= link(book.title, to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(book)), class: "title") %>
           </span>
           <div class="right">
             <%= link(gettext("Delete"),
@@ -46,7 +46,7 @@
       <%= for book <- list.books do %>
         <li class="collection-item">
           <span>
-            <%= link(book.title, to: Routes.book_path(@conn, :show, book.id), class: "title") %>
+            <%= link(book.title, to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(book)), class: "title") %>
           </span>
           <div class="right">
             <%= link(gettext("Delete"),
