--- a/lib/bookify_web/controllers/list_html/show.html.heex
+++ b/lib/bookify_web/controllers/list_html/show.html.heex
@@ -1,7 +1,7 @@
 <%!-- <img src={@book.cover_pic_url}>
 <%= @book.title %>
 <br>
-<%= gettext("Author:") %> <%= link @book.author.name, to: Routes.author_path(@conn, :show, @book.author.id) %>
+<%= gettext("Author:") %> <%= link @book.author.name, to: Routes.author_path(@conn, :show, Bookify.Author.slug_with_id(@book.author)) %>
 <br>
 <%= gettext("Year:") %> <%= @book.publish_year %>
 <br>
