--- a/lib/bookify_web/controllers/admin_html/reviews.html.heex
+++ b/lib/bookify_web/controllers/admin_html/reviews.html.heex
@@ -8,7 +8,7 @@
       />
       <h6>
         <%= link(gettext("For: %{title}", title: review.book.title),
-          to: Routes.book_path(@conn, :show, review.book.id)
+          to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(review.book))
         ) %>
       </h6>
       <p class="right">
