--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -23,6 +23,18 @@
   --blue-8: #0a3069;
   --blue-9: #002155;
 
+  --purple-0: #fbefff;
+  --purple-1: #ecd8ff;
+  --purple-2: #d8b9ff;
+  --purple-3: #c297ff;
+  --purple-4: #a475f9;
+  --purple-5: #8250df;
+  --purple-6: #6639ba;
+  --purple-7: #512a97;
+  --purple-8: #3e1f79;
+  --purple-9: #2e1461;
+
+
   /* Typography */
 
   --content-font: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
