--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,5 +11,7 @@
 @import "authors-list.css";
 @import "book.css";
 @import "books-list.css";
+@import "empty.css";
+@import "list.css";
 @import "reviews-list.css";
 @import "search.css";
